--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>均價股票分析</title>
+    <title>均價股票分析1</title>
     <style TYPE="text/css">
         <!--
         div{
