--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>均價股票分析</title>
+    <title>三十日均價股票分析</title>
     <style TYPE="text/css">
         <!--
         div{
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>均價股票分析</h1>
+    <h1>以台灣50+台灣中小企100為BASE，三十日均價股票分析</h1>
     <h2> 綠>買點（觀查） ; 橘>30日均價（觀查） ; 紅>破底線（觀查） ; 三線皆突破>入場時機(ALL IN？？)</h2>
     <div>
         <img src="static/1102.png" />
