--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </head>
 <body>
     <h1>以台灣50+台灣中小企100為BASE，三十日均價股票分析</h1>
-    <h2> 綠>買點（觀查） ; 橘>30日均價（觀查） ; 紅>破底線（觀查） ; 三線皆突破>入場時機（ALL IN？？）</h2>
+    <h2> 綠>買點（觀查） ; 橘>30日均價（觀查） ;</br>
+	紅>破底線（觀查） ; </br>
+	三線皆突破>入場時機（ALL IN？？）</br>
+    </h2>
     <div>
         <img src="static/1101.png" />
     </div>
