--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 </head>
 <body>
     <h1>以台灣50+台灣中小企100為BASE，三十日均價股票分析</h1>
-    <h2> 綠>買點（觀查） ; 橘>30日均價（觀查） ;</br>
-	紅>破底線（觀查） ; </br>
-	三線皆突破>入場時機（ALL IN？？）</br>
-    </h2>
+    <h2> 
+		<ul>
+			<li>綠 > 買點（觀查）</li>
+			<li>橘 > 30日均價（觀查）</li>
+			<li>紅 > 破底線（觀查）</li>
+			<li>三線皆突破 > 入場時機（ALL IN？？）</li>
+		</ul>
+	</h2>
     <div>
         <img src="static/1101.png" />
     </div>
