--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <div>
         <img src="static/0056.png" />
     </div>
-    
+	
+    <div>
+        <img src="static/00881.png" />
+    </div>
+	
     <div>
         <img src="static/00878.png" />
     </div>
