--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
     <div>
         <img src="static/2227.png" />
     </div>
-    
+
+    <div>
+        <img src="static/2233.png" />
+    </div>
+	
     <div>
         <img src="static/2301.png" />
     </div>
