--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     </style>
 </head>
 <body>
+
     <h1>台灣50 & 台灣中小企100為BASE，三十日均價股票分析</h1>
+
     <hr>
+    <a href="http://127.0.0.1:5000/tw_stock_list">股票清單</a> /
+    <a href="http://127.0.0.1:5000/daw_data/0050">成交量資訊</a> /
+    <a href="http://127.0.0.1:5000/daw_data/0050">歷年配股配息</a>
     <h2>
         <ul>
             <li>圖一：</li>
