--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         </style>
 </head>
 <body>
-   <a href="http://127.0.0.1:5000/">首頁</a> /
-   <a href="http://127.0.0.1:5000/linecheck">線型熱門選股</a> /
-   <a href="http://127.0.0.1:5000/tw_stock_list">股票清單</a> /
-   <a href="http://127.0.0.1:5000/daw_data/0050">成交量資訊</a> /
-   <a href="http://127.0.0.1:5000/daw_data/0050">歷年配股配息</a>
+    <a href="#">首頁</a> /
+    <a href="/linecheck">線型熱門選股</a> /
+    <a href="/tw_stock_list">股票清單</a> /
+    <a href="/daw_data/0050">成交量資訊</a> /
+    <a href="/daw_data/0050">歷年配股配息</a>
+    <div class="content">
    <div class="content">
        <h1>查看股票列表</h1>
        <hr/>
