--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </ul>
             <ul>
                 <li>圖二：</li>
-                <li>橘 > 5日均線（觀查）</li>
-                <li>綠 > 10日（觀查）</li>
+                <li>橘 > 5日週線均線（觀查）</li>
+                <li>綠 > 20日月線（觀查）</li>
                 <li>現價上升 & 橘線穿綠線 > 入場時機（ALL IN？？）</li>
             </ul>
         </h2>
