--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         .s1{
             height: 500px;
             width: 600px;
-            margin: 30px;
+            margin: 20px;
             float: left;
         }
         </style>
@@ -36,6 +36,10 @@
                 <li>橘 > 5日週線均線（觀查）</li>
                 <li>綠 > 20日月線（觀查）</li>
                 <li>現價上升 & 橘線穿綠線 > 入場時機（ALL IN？？）</li>
+            </ul>
+            <ul>
+                <li>圖三：</li>
+                <li>成交量型（觀查）</li>
             </ul>
         </h2>
         <hr>
