--- a/login.html
+++ b/login.html
@@ -1,10 +1,30 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
+        <style TYPE="text/css">
+        .s1{
+            height: 500px;
+            width: 700px;
+            margin: 10px;
+            float: left;
+        }
+        </style>
 </head>
 <body>
-    <h1>不對外開放，感謝。</h1>
+   <a href="#">首頁</a> /
+   <a href="/linecheck">線型熱門選股</a> /
+   <a href="/tw_stock_list">股票清單</a> /
+   <a href="/daw_data/0050">成交量資訊</a> /
+   <a href="/daw_data/0050">歷年配股配息</a>
+   <div class="content">
+       <h1></h1>
+       <hr/>
+        
+        <h1>不對外開放，感謝。</h1>
+    
+   </div>
 </body>
 </html>
