--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
    <a href="#">首頁</a> /
-   <a href="/login.html">線型熱門選股</a> /
-   <a href="/login.html">股票清單</a> /
-   <a href="/login.html">成交量資訊</a> /
-   <a href="/login.html">歷年配股配息</a>
+   <a href="login.html">線型熱門選股</a> /
+   <a href="login.html">股票清單</a> /
+   <a href="login.html">成交量資訊</a> /
+   <a href="login.html">歷年配股配息</a>
    <div class="content">
        <h1>阿志三十日均價股票分析</h1>
        <hr/>
