--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>阿志三十日均價股票分析</title>
+    <title>三十日均價股票分析</title>
         <style TYPE="text/css">
         .s1{
             height: 500px;
