--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <a href="login.html">成交量資訊</a> /
    <a href="login.html">歷年配股配息</a>
    <div class="content">
-       <h1>阿志三十日均價股票分析</h1>
+       <h1>三十日均價股票分析</h1>
        <hr/>
         
         <h2>
