--- a/index.html
+++ b/index.html
@@ -26,20 +26,24 @@
         <h2>
             <ul>
                 <li>圖一：</li>
-                <li>橘 > 30日均線（觀查）</li>
+                <li>橘 > 20日均線（觀查）</li>
                 <li>綠 > 10% 突破線（觀查）</li>
                 <li>紅 > 10% 跌破線（觀查）</li>
                 <li>現價上升 & 三線皆突破 > 入場時機（ALL IN？？）</li>
             </ul>
             <ul>
                 <li>圖二：</li>
+                <li>成交量型（觀查）</li>
+            </ul>
+            <ul>
+                <li>圖三：</li>
                 <li>橘 > 5日週線均線（觀查）</li>
                 <li>綠 > 20日月線（觀查）</li>
                 <li>現價上升 & 橘線穿綠線 > 入場時機（ALL IN？？）</li>
             </ul>
             <ul>
                 <li>圖三：</li>
-                <li>成交量型（觀查）</li>
+                <li>MACD（觀查）</li>
             </ul>
         </h2>
         <hr>
