--- a/login.html
+++ b/login.html
@@ -14,11 +14,12 @@
         </style>
 </head>
 <body>
-   <a href="#">首頁</a> /
-   <a href="/linecheck">線型熱門選股</a> /
-   <a href="/tw_stock_list">股票清單</a> /
-   <a href="/daw_data/0050">成交量資訊</a> /
-   <a href="/daw_data/0050">歷年配股配息</a>
+   <a href="/">首頁</a> /
+   <a href="/save_stock.html">長線存股</a> /
+   <a href="/login.html">線型熱門選股</a> /
+   <a href="/login.html">股票清單</a> /
+   <a href="/login.html">成交量資訊</a> /
+   <a href="/login.html">歷年配股配息</a>
    <div class="content">
        <h1></h1>
        <hr/>
