--- a/save_stock.html
+++ b/save_stock.html
@@ -14,14 +14,14 @@
         </style>
 </head>
 <body>
-   <a href="/">首頁</a> /
-   <a href="/save_stock.html">長線存股</a> /
-   <a href="/login.html">線型熱門選股</a> /
-   <a href="/login.html">股票清單</a> /
-   <a href="/login.html">成交量資訊</a> /
-   <a href="/login.html">歷年配股配息</a>
+   <a href="piske.github.io/">首頁</a> /
+   <a href="piske.github.io/save_stock.html">長線存股</a> /
+   <a href="piske.github.io/login.html">線型熱門選股</a> /
+   <a href="piske.github.io/login.html">股票清單</a> /
+   <a href="piske.github.io/login.html">成交量資訊</a> /
+   <a href="piske.github.io/login.html">歷年配股配息</a>
    <div class="content">
-       <h1>查看股票列表</h1>
+       <h1>長線存股</h1>
        <hr/>
         
         <h2>
