--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         </style>
 </head>
 <body>
-   <a href="">首頁</a> /
-   <a href="save_stock.html">長線存股</a> /
-   <a href="login.html">線型熱門選股</a> /
-   <a href="login.html">股票清單</a> /
-   <a href="login.html">成交量資訊</a> /
-   <a href="login.html">歷年配股配息</a>
+   <a href="https://piskelee.github.io/piske.github.io/">首頁</a> /
+   <a href="https://piskelee.github.io/piske.github.io/save_stock.html">長線存股</a> /
+   <a href="https://piskelee.github.io/piske.github.io/login.html">線型熱門選股</a> /
+   <a href="https://piskelee.github.io/piske.github.io/login.html">股票清單</a> /
+   <a href="https://piskelee.github.io/piske.github.io/login.html">成交量資訊</a> /
+   <a href="https://piskelee.github.io/piske.github.io/login.html">歷年配股配息</a>
    <div class="content">
        <h1>三十日均價股票分析</h1>
        <hr/>
