--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </style>
 </head>
 <body>
-   <a href="https://piskelee.github.io/piske.github.io/">首頁</a> /
+   <a href="https://piskelee.github.io/piske.github.io/index.html">首頁</a> /
    <a href="https://piskelee.github.io/piske.github.io/save_stock.html">長線存股</a> /
    <a href="https://piskelee.github.io/piske.github.io/login.html">線型熱門選股</a> /
    <a href="https://piskelee.github.io/piske.github.io/login.html">股票清單</a> /
