--- a/save_stock.html
+++ b/save_stock.html
@@ -45,10 +45,39 @@
              </ul>
          </h2>
          <hr>
-         
+            <div class="s1">
+                <img src="static/MA_20/0050.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/0050.png" />
+            </div>
+
+            <div class="s1">
+                <img src="static/MA_20/0056.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/0056.png" />
+            </div>
+
+            <div class="s1">
+                <img src="static/MA_20/00878.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/00878.png" />
+            </div>
+
+            <div class="s1">
+                <img src="static/MA_20/00881.png" />
+            </div>
+
+            <div class="s1">
+                <img src="static/MA_5/00881.png" />
+            </div>
+
              <div class="s1">
                  <img src="static/MA_20/1101.png" />
              </div>
+             
              <div class="s1">
                  <img src="static/MA_5/1101.png" />
              </div>
