--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
    <a href="/">首頁</a> /
    <a href="/tw_stock_list">股票清單</a> /
+   <a href="/tw_stock_add">新增選股</a> /
    <div class="content">
        <h1>三十日均價股票分析</h1>
        <hr/>
@@ -141,6 +142,13 @@
             </div>
             <div class="s1">
                 <img src="static/MA_5/1312.png" />
+            </div>
+    
+            <div class="s1">
+                <img src="static/MA_20/1314.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/1314.png" />
             </div>
     
             <div class="s1">
