--- a/index.html
+++ b/index.html
@@ -1069,6 +1069,13 @@
             </div>
     
             <div class="s1">
+                <img src="static/MA_20/6281.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/6281.png" />
+            </div>
+    
+            <div class="s1">
                 <img src="static/MA_20/6285.png" />
             </div>
             <div class="s1">
