--- a/index.html
+++ b/index.html
@@ -558,6 +558,13 @@
             </div>
     
             <div class="s1">
+                <img src="static/MA_20/2539.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/2539.png" />
+            </div>
+    
+            <div class="s1">
                 <img src="static/MA_20/2542.png" />
             </div>
             <div class="s1">
