--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
             <div class="s1">
                 <img src="static/MA_5/0056.png" />
             </div>
-    
+
+            <div class="s1">
+                <img src="static/MA_20/006208.png" />
+            </div>
+            <div class="s1">
+                <img src="static/MA_5/006208.png" />
+            </div>
+            
             <div class="s1">
                 <img src="static/MA_20/00878.png" />
             </div>
