--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             <div class="s1">
                 <img src="static/pic/00881.png" />
             </div>
+
+            <div class="s1">
+                <img src="static/pic/00900.png" />
+            </div>
     
             <div class="s1">
                 <img src="static/pic/1101.png" />
